--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -2,10 +2,15 @@
 
 Ethereum の開発環境
 
-2025/08/26
+2025/08/27
 Shigeichiro Yamasaki
 
-hardhat 3 は，viem という TypeScript ライブラリを利用してEVMと対話します．
+hardhat 3 は，hardhat 2 と多くの相違点があります
+
+* EVM と対話するラッピングクライアントのデフォルトが，Ethers.js から viem に変更された
+* テスト言語に solidityが追加され，Chai, moca から Node test runner がデフォルトになった
+* TypeScript と ESM がデフォルトになった
+* 複数のチェーンへの同時接続が可能になった
 
 
 ##  <a id="setup">環境のセットアップ</a>
@@ -772,334 +777,157 @@ npx hardhat test <test-file-1> <test-file-2> ...
 
 ### セットアップ
 
+* viem プラグインのインストール
+
+```bash
+npm install --save-dev @nomicfoundation/hardhat-viem
+```
+
+* hardhat.config.ts の修正
+
+```ts
+...
+import hardhatViem from "@nomicfoundation/hardhat-viem";
+
+const config: HardhatUserConfig = {
+  plugins: [
+    hardhatViem,
+    // ...other plugins...
+  ],
+  // ...other config...
+};
+
+export default config;
+```
+
+
 ### ネットワークへの接続
 
-### viem クライアントの利用
+hardhat の network マネージャの network connections を使ってネットワークに接続します
+
+```ts
+import { network } from "hardhat";
+
+const connection = await network.connect();
+```
+
+viem を拡張した hardhat-viem プラグインはこのネットワーク接続機能のヘルパーを提供します
+
+```ts
+const { viem } = await network.connect();
+
+const publicClient = await viem.getPublicClient();
+console.log("Latest block number:", await publicClient.getBlockNumber());
+```
+
+### viem クライアントの利用方法
+
+hardhat-viem プラグインは viem クライアントを簡単に利用できるようにします．
+
+* viem クライアントの生成
+public client は，getPublicClient メソッドによって生成することができます．
+
+```ts
+const { viem } = await network.connect();
+
+const publicClient = await viem.getPublicClient();
+
+console.log("Latest block number:", await publicClient.getBlockNumber());
+
+```
+
+* ワレットの生成
+getWalletClients メソッドによって Hardhatの設定に従ってワレットクライアントの配列を返します
+
+```ts
+const [senderClient, receiverClient] = await viem.getWalletClients();
+
+await senderClient.sendTransaction({
+  to: receiverClient.account.address,
+  value: 10n ** 18n,
+});
+```
 
 
 ### コントラクトのデプロイと操作
 
+hardhat-viem にはデプロイ機能もあります．deployContract 関数でデプロイを行います．
+この関数の返り値は viem contract instance です
+
+```ts
+import { network } from "hardhat";
+
+const { viem } = await network.connect();
+const counter = await viem.deployContract("Counter");
+
+await counter.write.inc();
+
+console.log("Counter value:", await counter.read.x());
+```
+
+コンストラクターが引数を持つ場合は，第2引数で渡すことができます
+
+```ts
+const initialValue = 10n;
+const counter = await viem.deployContract("Counter", [initialValue]);
+```
+デフォルトでは 定義された最初のアカウントからデプロイされますが，デプロイするアカウントを指定することもできます
+
+```ts
+const [wallet1, wallet2] = await viem.getWalletClients();
+
+const counter = await viem.deployContract("Counter", [10n], {
+  client: {
+    wallet: wallet2,
+  },
+});
+```
+
+deployContract関数は，デプロイが完了するまで待ちます．
+マイニングが完了する以前にデプロイのトランザクションを送信したい場合 sendDeploymentTransaction 関数を使います
+
+```ts
+const { deploymentTransaction } = await viem.sendDeploymentTransaction(
+  "Counter",
+  [10n],
+  {
+    client: {
+      wallet: wallet2,
+    },
+  }
+);
+
+```
+
+
 ### viem ベース処理のテストアサーション
 
+hardhat-viem-assertions プラグインによる TypeScriptテストの定義方法です
 
+* 呼び出した関数が期待したイベントを発生していることを確認するテスト
 
+```ts
+it("Should emit the Increment event when calling the inc() function", async function () {
+  const counter = await viem.deployContract("Counter");
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-========================================================================
-# 以下は hatdhat 2 までの時代の古い情報
-
-### Chai.js によるテストのアサーションの記述方法
-
-should , expect, assert の３タイプのテストの流儀が利用可能
-
-#### expect タイプの場合
-
-* メソッドチェーン(以下のメソッドは読みやすさのためのもので，処理の連鎖以外の意味は無い）
-to
-be
-does
-have
-and
-...
-
-* equal() : 等しい
-* a(型)/an(型) : 型チェック
-* include() ：含む
-* not ： それ以降の否定
-* true ： trueになる
-* false ： falseになる
-* within(開始, 終了) : 開始から終了の間 
-
-```js
-expect(x).to.equal(2);  		    // xは2に等しい
-expect(x).to.be.a('string');  	// x はstring型
-expect(x).to.be.an('array');  	// x はarray型
-expect(x).to.include(3);  		// xは3を含む
-expect(x).to.does.not.include(3);  // xは3を含まない
-expect(x).to.be.true			  // xは true
-expect(x).to.be.false		    // xは false
-```
-
-### Mocha によるテストフレームワークの記述
-
-* テストの定義(describe)(
-  * 事前条件(before)
-     * 個別のアサーションの事前条件(beforeEach)
-     * 個別のアサーション(it) 
-     * 個別のアサーションの事前条件(afterEach)
-  * 結果(after)
-* )
-
-#### Mochaの文法
-
-* describe()	:テストの定義
-* before()	：事前条件
-* after()            : 事後条件
-* it()		：個別のアサーション
-* beforeEach() ：個別のアサーションの事前処理
-* afterEach()    ：個別のアサーションの事後処理
-
-
-#### Mocha によるテストの例
-
-以下は assert スタイルの例です
-
-```js
-describe("べき乗関数 pow", function() {
-  it("2の0乗は1", function() {
-    assert(math.pow(2, 0)==1);
-  });
-  it("2の3乗は8", function() {
-    assert(math.pow(2, 3)==(8));
-  });
-  it("2の-2乗は0.25", function() {
-    assert(math.pow(2, -2)==0.25);
-  });
+  await viem.assertions.emitWithArgs(
+    counter.write.inc(),
+    counter,
+    "Increment",
+    [1n]
+  );
 });
 
 ```
 
-expect スタイルの場合
-
-```js
-describe("べき乗関数 pow", function() {
-  it("2の0乗は1", function() {
-    expect(math.pow(2, 0)).to.equal(1);
-  });
-  it("2の3乗は8", function() {
-    expect(math.pow(2, 3)).to.equal(8);
-  });
-  it("2の-2乗は0.25", function() {
-    expect(math.pow(2, -2)).to.equal(0.25);
-  });
-});
-```
-
-### ethers.js (v6系) を使ったコントラクトのデプロイ
-
-* ethers.deployContract 関数
-
-デプロイするコントラクトのABIやバイトコードと初期値を入れてトランザクション化
-トランザクションをブロードキャストしてコントラクトをデプロイする
-
-  * 引数
-    * ABI
-    * コントラクト
-    * コンストラクタの初期値の配列: []
-  * 返り値
-    *デプロイしたトランザクションのハッシュ値
-  
-```js
-const contract = await ethers.deployContract(abi, contract,[args])
-```
 
 
-### Hardhat Toolbox の利用
-
-hardhat には etheres.js を利用して開発するための各種ツールが備わっています．
-
-[Hardhat Toolbox](https://hardhat.org/hardhat-runner/plugins/nomicfoundation-hardhat-toolbox)
-
-
-* test やデプロイには，hardhat toolbox を利用するのが便利です
-
-
-## テストプログラムの作成
-
-* プロジェクトルートの下に test ディレクトリにテストプログラムを作成します
-* hardhat では，chai を ES6モジュール（commonJSモジュール）ではなく Node.js モジュールとして require で読み込むことに注意してください
-
-* Token.js 
-
-```bash
-nano test/Token.js
-```
-
-* hardhat toolbox の loadFixture を利用します．
-* コントラクトのデプロイとテスト用アカウントを生成する処理を関数として定義しています
-* it によるテスト項目ごとに上記の関数と loadFixture でテスト環境を初期化します
-
-```js
-// hardhat tool box の loadFixture 利用
-const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
-// Chaiのライブラリを利用
-const { expect } = require("chai");
-
-// Token コントラクトのデプロイとテスト用アカウントを準備する関数
-async function deployTokenFixture() {
-  // テスト用アカウントの取得（ethers.getSigners() はアカウント取得用関数）
-  const [owner, addr1, addr2] = await ethers.getSigners();
-  // コントラクトをデプロイする
-  const Token = await ethers.deployContract("Token");
-  // テスト用フィクスチャ
-  return { Token, owner, addr1, addr2 };
-}
-
-describe("Tokenコントラクトのテスト", function () {
-  it("デプロイによりトークンの総量が所有者に割り当てられること", async function () {
-    // Token テスト用フィクスチャをロードする
-    const {Token, owner, addr1, addr2} = await loadFixture(deployTokenFixture);
-    // オーナーの所持金の初期値
-    const ownerBalance = await Token.balanceOf(owner.address);
-    // トークンの総量がオーナーの所持金の初期値と等しいことの確認
-    expect(await Token.totalSupply()).to.equal(ownerBalance);
-  });
-});
-```
-
-* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
-* キーボード：`<ctrl x>` で nano エディタ終了
-
-
-### テストの実行
-
-* プロジェクトルートから hardhat のテストタスクを実行します
-
-```bash
-npx hardhat test
-=>
-
-  Tokenコントラクトのテスト
-    ✔ デプロイによりトークンの総量が所有者に割り当てられること (365ms)
-
-
-  1 passing (367ms)
-```
-
-### テストプログラムの内容の説明
-
-* ethers オブジェクトは，ラッピングライブラリ ethers.js を意味します．
-* ethers.getSigners() は，トランザクション送信者（署名者）のEthereumアカウントを返すメソッドです．
-
-```js
-const [owner] = await ethers.getSigners();
-```
-* ethers.deployContract()  は，引数のコントラクトをデプロイする ethers.js メソッドです．
-* デプロイが完了すると Token というコントラクトのオブジェクトが利用可能になります．
-
-```js
-const Token = await ethers.deployContract("Token");
-```
-* コントラクトオブジェクト Tokenに対して balanceOf メソッドを使うと Owner の所持金を確認することができます．
-
-```js
-const ownerBalance = await Token.balanceOf(owner.address);
-```
-* コントラクトオブジェクト Token に対して totalSupply というメソッドを使ってトークンの総量を求めます．
-* ここではさらに，その値が Ownerの所持金と等しいことをテストします．
-
-```js
-expect(await Token.totalSupply()).to.equal(ownerBalance);
-```
-
-#### テストの修正
-
-```bash
-nano test/Token.js
-```
-
-```js
-// hardhat tool box の利用
-const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
-// CHaiの利用
-const { expect } = require("chai");
-
-describe("Tokenコントラクト", function () {
-  async function deployTokenFixture() {
-    // 複数のテスト用アカウントの取得
-    const [owner, addr1, addr2] = await ethers.getSigners();
-    // コントラクトをデプロイする
-    const Token = await ethers.deployContract("Token");
-    // Tokenテスト用フィクスチャ
-    return { Token, owner, addr1, addr2 };
-  }
-
-  it("Tokenの総量が owner に割り当てられていること", async function () {
-    // Tokenテスト用フィクスチャをロードする
-    const { Token, owner } = await loadFixture(deployTokenFixture);
-    // オーナーの所持金額の確認
-    const ownerBalance = await Token.balanceOf(owner.address);
-    // トークンの総額はオーナーの所持金に等しい
-    expect(await Token.totalSupply()).to.equal(ownerBalance);
-  });
-
-  it("アカウント間でトークンが転送されること", async function () {
-    // Tokenテスト用フィクスチャをロードする
-    const { Token, owner, addr1, addr2 } = await loadFixture(
-      deployTokenFixture
-    );
-
-    // 50トークンを owner から addr1 に送金する
-    await expect(
-      Token.transfer(addr1.address, 50)
-    ).to.changeTokenBalances(Token, [owner, addr1], [-50, 50]);
-
-    // 50トークンを addr1 から addr2に送金する
-    // ここではトークンの送金に .connect(signer) を利用している
-    await expect(
-      Token.connect(addr1).transfer(addr2.address, 50)
-    ).to.changeTokenBalances(Token, [addr1, addr2], [-50, 50]);
-  });
-});
-
-```
-
-* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
-* キーボード：`<ctrl x>` で nano エディタ終了
-
-#### テストの再実行
-
-```bash
-npx hardhat test 
-
-=>
-  Tokenコントラクト
-    ✔ Tokenの総量が owner に割り当てられていること (316ms)
-    ✔ アカウント間でトークンが転送されること
-
-
-  2 passing (330ms)
-```
 
 
 ## <a id="hhNetwork"> Hardhar Networkの起動</a>
 
 * ここから新しく別のターミナルを開く
 * プロジェクトルートに移動する
-
-```bash
-cd ~/hardhat/tutorial
-```
 
 ### hardhat node の起動
 
@@ -1135,7 +963,7 @@ Any funds sent to them on Mainnet or any other live network WILL BE LOST.
 * 各アカウントのアドレスと秘密鍵を確認してください
 
 
-### メタマスクの利用
+## メタマスクの利用
 
 有名なethrerum ワレットです
 
@@ -1172,67 +1000,7 @@ Hardhat node の起動画面のアカウントのリストにある
 
 * <img src="images/metamask6.png" width="400">
 
+* アカウントに 10000 ETH の所持金があることを確認する
+* 複数のアカウントを取り込み，ETH の送金などを試してください
 
-
-## コントラクトのデプロイ
-
-### hardhat ignition を利用したコントラクトのデプロイ
-
-* hardhat ignition は，デプロイスクリプトを抽象化し，デプロイスクリプトのモジュールとして，宣言的にデプロイを記述します
-
-#### Future オブジェクト
-
-* この宣言的にデプロイを実施するモジュールのことを `Future` オブジェクトと呼びます
-* `Future` オブジェクトは，デプロイを実施する方法を記述しているだけで，実際にネットワークへのデプロイは行いません．
-
-#### buildModule 関数
-
-* buildModule 関数は `Future` モジュールを生成する関数です．
-* この関数の，第１引数がモジュール名で，第２引数がモジュールを定義するコールバック関数です．
-* `Future` オブジェクトの生成は，`contract` メソッドと `call` メソッドで実施します．
-* `contract` メソッドは，コントラクトのインスタンスをデプロイするための指示を生成します．
-* `call` メソッドはコントラクトの関数を呼び出す指示を生成します．
-
-### デプロイモジュール
-
-```bash
-nano ignition/modules/Token.js
-```
-  
-```js
-// hardhat toolbox を利用する
-const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
-
-// ここではモジュール名を "Tutorial" にしている．引数 m に実際のモジュールが渡される
-module.exports = buildModule("Tutorial", (m) => {
-  // コントラクト名Tokenのインスタンスに対するデプロイ指示となる Future オブジェクトの生成
-  // この例ではコンストラクタの引数は無いが，引数がある場合は配列 [] の中に設定する
-  const contract = m.contract("Token", []);
-  // コントラクトをデプロイするFuture オブジェクトを返す
-  return { contract };
-});
-```
-
-### デプロイの実行
-
-* 新しいターミナルのプロジェクトルート・ディレクトリから実行 (--network の後にデプロイするネットワークを指定する)
-
-```bash
-npx hardhat ignition deploy ignition/modules/Token.js --network localhost
-
-=>
-Hardhat Ignition 🚀
-
-Deploying [ Tutorial ]
-
-Batch #1
-  Executed Tutorial#Token
-
-[ Tutorial ] successfully deployed 🚀
-
-Deployed Addresses
-
-Tutorial#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-
-```
 
