--- a/ethereum/02. console.md
+++ b/ethereum/02. console.md
@@ -1,12 +1,12 @@
 # 02. Hardhat による Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2025/03/09
+最終更新 2025/08/27
 Shigeichiro Yamasaki
 
 
 ## 前提条件
 
-* 自分の Hardhat プロジェクトのプロジェクトルートにいることを前提にします．
+* 自分の Hardhat 3 プロジェクトのプロジェクトルートにいることを前提にします．
 
 ```bash
 cd ~/hardhat/tutorial
