--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -16,7 +16,7 @@ hardhat 3 は，hardhat 2 と多くの相違点があります
 ##  <a id="setup">環境のセットアップ</a>
 
 * hardhat node はローカルマシンで実行することを前提にします
-* Node.js と JavaScriptの知識が前提になります
+* Node.js と JavaScript と TypeScript の知識が前提になります
 
 ### ubuntu
 
