--- a/ethereum/03. payable.md
+++ b/ethereum/03. payable.md
@@ -1,6 +1,7 @@
 # 03. Eth を所有可能なコントラクトの作成
 
-2025/03/09
+2025/08/28
+
 Shigeichiro Yamasaki
 
 ## コントラクトアドレスへのEth 送金を可能にする方法
@@ -17,22 +18,23 @@ cd payable
 ```
 
 ```bash
-yarn init -y
-yarn add --dev hardhat
-npx hardhat init
+npx hardhat --init
 
-// 消さなくても実害は無いが消しておく
+// デフォルトのまま return キーを押す
 
-rm contracts/Lock.sol
-rm test/Lock.js
-rm ignition/modules/Lock.js
+// デフォルトで自動生成される以下のファイルは消さなくても実害は無いが消しておく
+
+rm contracts/Counter.sol
+rm contracts/Counter.t.sol
+rm test/Counter.ts
+rm ignition/modules/Counter.ts
 ```
 ### コントラクトのコードの作成
 
 * プロジェクトルートに移動して solidity プログラムを作成
 
 ```bash
-nano contracts/EthWallet.sol
+contracts/EthWallet.sol
 ```
 
 * コメントをよく読んでください
@@ -43,19 +45,21 @@ pragma solidity ^0.8.0;
 
 contract EthWallet {
     address public owner;
-
+    // コンストラクタ
     constructor() {
-      // コントラクトをデプロイしたアドレスを所有者として設定
+      // コントラクトをデプロイしたアカウントのアドレスを所有者(owner)として設定
         owner = msg.sender; 
     }
-    // コントラクトがETHを受け取れるようにするための関数
+    // このコントラクトがETHを受け取れるようにする関数
     receive() external payable {
         // 受け取ったETHは自動的にコントラクトの残高に加算されます
     }
-    // コントラクトへ ETHを預金する deposit はpayable 関数
+    // コントラクトへ ETHを預金する関数
+    // deposit はpayable 関数
     function deposit() public payable {
     }
-    // 所有者のみがコントラクトのETHを引き出せるようにする関数
+    // コントラクトの所持金の引き出し
+    // 所有者のみがコントラクトのETHを引き出せる
     function withdraw(uint256 amount) public {
         require(msg.sender == owner, "only owner can withdraw");
         require(amount <= address(this).balance, "not enough Eth");
