シェルスクリプトの説明を移動

--- a/bitcoin/0.bitcoin-core-testnet4.md
+++ b/bitcoin/0.bitcoin-core-testnet4.md
@@ -5,6 +5,8 @@
 
 ## install 方法
 
+[シェルスクリプトの利用](./9.shellscript)を前提とします
+
 ### MacOSXの場合
 
 [Bitcoin core ダウンロードサイト](https://bitcoincore.org/bin/)からapple のdmg 形式のインストーラをダウンロードする
@@ -223,3 +225,58 @@ tb1qa0gknzlqcx2mz54myqvxl8ev3h2w6lswqw4gvj
 [https://faucet.testnet4.dev/](https://faucet.testnet4.dev/)
 
 
+## bitcoin testnet4 のCPUマイニング
+
+bitcoin mainnet でのマイニングは CPU でのマイニングは現実的ではありませんが，testnet4 は難易度が低いので現実的に可能です．
+
+以下では，自分のマシンに testnet4 のノードが稼働していることを前提にします．
+
+また，設定ファイル `bitcoin.conf` の内容は，上記のものとします．
+
+特に rpc user のユーザー名とパスワードを利用していますが，必要に応じて変更してください．
+
+```bash
+rpcuser=hoge
+rpcpassword=hoge
+```
+
+### マイニング報酬受取用アドレスの生成
+
+```bash
+ADDR=`bitcoin-core.cli getnewaddress`
+```
+
+### CPUマイニングのツール cpuminer のインストール
+
+```bash
+sudo apt install git build-essential automake libcurl4-openssl-dev
+git clone https://github.com/pooler/cpuminer.git
+cd cpuminer
+./autogen.sh
+./configure CFLAGS="-O3"
+make
+```
+
+### CPU マイニング開始
+
+```bash
+./minerd -a sha256d  -o http://127.0.0.1:48332 -u hoge -p hoge --coinbase-addr=$ADDR
+```
+
+### マイニングが成功したことの確認方法
+
+testnet4 でもそれなりの時間がかかります
+
+* 自分に関連するトランザクションの一覧を出力する
+  
+```bash
+bitcoin-core.cli listtransactions 
+```
+
+* マイニング関連のトランザクションを確認する
+
+```bash
+watch -n 3 'bitcoin-core.cli listtransactions "*" 5'
+```
+
+`category: "generate" ` の表記があればそれがマイニング報酬
