--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2025/08/27
+2025/12/05
 Shigeichiro Yamasaki
 
 hardhat 3 は，hardhat 2 と多くの相違点があります
@@ -34,7 +34,7 @@ npm install -g yarn
 
 node -v
 =>
-v24.6.0
+v25.2.1
 ```
 * VS code のインストール
 
@@ -61,7 +61,7 @@ npm install -g yarn
 
 node -v
 =>
-v24.6.0
+v25.2.1
 ```
 
 * VS code のインストール
@@ -147,8 +147,8 @@ Ok to proceed? (y)
 
 ```bash
 npx hardhat --help
-
-Hardhat version 3.0.1
+=>
+Hardhat version 3.0.17
 
 Usage: hardhat [GLOBAL OPTIONS] <TASK> [SUBTASK] [TASK OPTIONS] [--] [TASK ARGUMENTS]
 
@@ -179,7 +179,7 @@ AVAILABLE TASKS:
 
 hardhat プロジェクトのディレクトリは以下のような構成になっている
 
-```
+```bash
 tree -L 1
 =>
 .
@@ -201,19 +201,23 @@ tree -L 1
 
 ```bash
 tree contracts -L 1
+=>
 contracts
 ├── Counter.sol
 └── Counter.t.sol
 
-tree test -L 1     
+tree test -L 1    
+=> 
 test
 └── Counter.ts
 
 tree ignition -L 1 
+=>
 ignition
 └── modules
 
 tree scripts -L 1 
+=>
 scripts
 └── send-op-tx.ts
 ```
